kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gamex
  annotations:
    linkerd.io/inject: enabled
