kubernetes/notification_service.yaml
# k8s/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: gamex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: notification:latest   # build & load into Docker Desktop
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: gamex
spec:
  selector:
    app: notification
  ports:
  - port: 8000
    targetPort: 8000
